--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>near-me-tech-onepage</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Computershopnearme</title>
+    <meta name="description" content="Computershopnearme" />
+    <meta name="author" content="Computershopnearme" />
 
-    <meta property="og:title" content="near-me-tech-onepage" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Computershopnearme" />
+    <meta property="og:description" content="Computershopnearme" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://Computershopnearme.com/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@Computershopnearme" />
+    <meta
+      name="twitter:image"
+      content="https://Computershopnearme.com/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
